# Simple-Structured-Flask-App

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  ruff.toml  run.py  wsgi.py
app/: __init__.py
app/cli/: manage.py
app/main/: __init__.py  routes.py  routes_supporting.py
app/templates/: layout.html
e_flask_app/: __init__.py  views.py
e_flask_app/templates/: index.html
instance/examples/: config.toml
