[project]
name = "Simple Structured Flask App"
version = "0.1.0"
description = "An easy basic flask app with just enough structure to be a useful starting point."
authors = ["Me <me@mine.com>"]
license = "MIT"
dependencies = [
    "flask",
    "ruff",
]
urls = {repository = "https://github.com/jtrip/Simple-Structured-Flask-App"}
